add review comment (#35)
* add review comment

* minor update
