# docs/swagger.json
@@ -196,6 +196,50 @@
                 }
             }
         },
+        "/v1/softwarepkg/{id}/review/comment": {
+            "post": {
+                "description": "create a new software package review comment",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "SoftwarePkg"
+                ],
+                "summary": "create a new software package review comment",
+                "parameters": [
+                    {
+                        "description": "body of creating a new software package review comment",
+                        "name": "param",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.reviewCommentRequest"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "id of software package",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ResponseData"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ResponseData"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/softwarepkg/{id}/review/reject": {
             "put": {
                 "description": "reject software package",
@@ -362,6 +406,17 @@
                 },
                 "data": {},
                 "msg": {
+                    "type": "string"
+                }
+            }
+        },
+        "controller.reviewCommentRequest": {
+            "type": "object",
+            "required": [
+                "comment"
+            ],
+            "properties": {
+                "comment": {
                     "type": "string"
                 }
             }
